# openreroc_motion_sensor

./: CMakeLists.txt  README.md  package.xml
hardware/image/: openreroc_motion_sensor.bit
hardware/src/: sensor_ctl.v  sonic_sensor.v
include/openreroc_motion_sensor/: openreroc_motion_sensor.h
msg/: openreroc_motion_sensor.msg
src/: openreroc_motion_sensor.cpp  sample_output.cpp
